# hackathon-final

./: README.md  hackathon.geany  veda-trigger.sh
onto/: hack-application.ttl  hack-blanks.ttl  hack-category-individuals.ttl  hack-classifier-test.ttl  hack-classifier-ui.ttl  hack-classifier.ttl  hack-create.ttl  hack-dictionary-individuals.ttl  hack-externaluser-individuals.ttl  hack-layout.ttl  hack-object-testdata.ttl  hack-object-ui.ttl  hack-report.ttl  hack-request-schema.ttl  hack-request-ui.ttl  hack-rights.ttl  hack-role-individuals.ttl  hack-schema.ttl  hack-search.ttl  hack-startForm.ttl  hack-ui.ttl
onto/request/: hack-category-individuals.ttl  hack-request-schema.ttl  hack-request-ui.ttl
veda-ml/: Cargo.toml  stopwords.txt
veda-ml/src/: main.rs  ml_naive_bayes.rs
