[package]
name = "veda-ml"
version = "0.1.0"
authors = ["Itiua <ValeriyBushenev@gmail.com>"]
edition = "2018"

[dependencies]
#tensorflow = "0.13.0"
#tensorflow-sys = "0.16.0"
naivebayes = "0.1.1"
rust-stemmers = "1.1.0"
scanlex = "0.1.2"
quick-csv = "0.1.6"
chrono = "0.4"
serde_json = "1.0"
nng = "0.5.0"
env_logger = "0.6"
log = "0.4"
rust-ini = "0.13"
v_queue = { path = "../v-queue" }
v_onto = { path = "../v-onto" }
v_search = { path = "../v-search" }
v_storage = { path = "../v-storage" }
v_module = { path = "../v-module" }
v_api = { path = "../v-api" }

[[bin]]
name = "veda-ml"
path = "src/main.rs"
